# trading-journal

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Configuration Plan.md  Dockerfile  IMPLEMENTATION_STATUS.md  PLAN.md  PRD-VALIDATION-COMPLETE.md  PRD-raw.md  PRD.md  README.md  RELEASE_NOTES.md  completed_trades_backup_20260308.csv  create_user.py  creds.py  docker-compose.openobserve.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  main.py  openobserve-up.sh  pyproject.toml  tasks.md  version.json  version_manager.py  wsgi.py
alembic/: env.py
alembic/versions/: 2026_03_08_setup_fk_and_sources.py  2026_03_08b_add_stop_price.py  2026_03_09_trade_annotations.py  2026_03_09b_fix_missing_schema.py  2026_03_09c_add_stop_price.py  2026_03_09d_all_missing_columns.py  2026_03_09e_trade_annotations_table.py  2026_03_09f_account_scoped_positions.py  2026_03_14_annotation_trading_context.py  2026_03_15_ohlcv_unique_constraint.py  2026_03_15_user_timezone.py  2026_03_19_journal_notes.py  2026_03_26_futures_instrument_type.py  2026_03_28_ohlcv_vwap.py  2026_03_29_hg_analysis_tables.py  2026_04_01_grail_plan_override.py  2026_04_07_grail_plan_analyses.py  2026_04_07b_grail_plan_analyses_no_data.py  2026_04_07c_gpa_bars_expected.py  (+7 more)
course/: _base.html  index.html
docs/: First analysis requirements.md  HG plans - whats been built.md  Notes to build out further.md  OVERVIEW.md  backtestplan.md  hg_plan.md  openobserve-upload-logging.md  original-claude.md  postgres mcp.md  postgres mcp.ms  vertical-put-debit-spread.md
examples/: 2025-12-01-TradeActivity ind.csv  2025-12-01-TradeActivity.csv  2026-04-21-TradeActivity-con.csv  251128.ndjson  251202-activity.ndjson  251203-04.ndjson  251205.json  25Sep-Nov.ndjson  output.ndjson  output2.ndjson
tests/: __init__.py  conftest.py  test_basic.py  test_config_manager.py  test_csv_parser.py  test_dashboard.py  test_data_purge.py  test_duplicate_detection.py  test_duplicate_fills.py  test_models.py  test_options_trade_completion.py  test_pnl_engine.py  test_signed_quantities.py  test_spread_trade_completion.py  test_trade_filtering.py  test_user_management.py
trading_journal/: __init__.py  cli.py  cli_auth.py  config.py  config_manager.py  csv_parser.py  dashboard.py  database.py  duplicate_detector.py  grail_analyzer.py  grail_connector.py  hg_evaluator.py  hg_hydration.py  ingestion.py  market_data.py  models.py  ninjatrader_parser.py  observability.py  positions.py  report_configs.py  schemas.py  setup_wizard.py  trade_completion.py  user_management.py
(+67 files in other folders)
