[project]
name = "trading-journal"
version = "1.27.1"
description = "PostgreSQL-based trading journal for data ingestion and performance analysis"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "click>=8.1.0",
    "psycopg2-binary>=2.9.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "tomli-w>=1.0.0",
    "flask>=3.0.0",
    "flask-session>=0.8.0",
    "werkzeug>=3.0.0",
    "gunicorn>=21.0.0",
    "tzdata>=2024.1",
    "markdown>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "mypy>=1.5.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "pre-commit>=3.3.0",
]

[project.scripts]
trading-journal = "trading_journal.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["trading_journal"]

[tool.hatch.build]
include = [
    "trading_journal/**",
]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
